--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-[![Build Status](https://travis-ci.org/AndersonUyekita/JHU_Building_R_Packages.svg?branch=master)](https://travis-ci.org/AndersonUyekita/JHU_Building_R_Packages)
+[![Build Status](https://github.com/eejingfeng/coursera)](https://travis-ci.org/AndersonUyekita/JHU_Building_R_Packages)
 
 # Peer-graded Assignment: Building an R Package
 
